--- a/changelog.html
+++ b/changelog.html
@@ -107,6 +107,10 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>26/11/2017</b></p>
+            <p class="text-justify"> - Melhoria nas tabelas geradas na página de testes.</p>
+            <p class="text-justify"> - As tabelas geradas podem ter valores negativos.</p>
+
             <p class="text-justify"><b>25/11/2017</b></p>
             <p class="text-justify"> - Novo texto explicativo na página de exemplos.</p>
             <p class="text-justify"> - Entrada de dados gerada na página de exemplos não cria entradas que gerem uma matriz de determinante zero nos algoritmos de regressão.</p>
