revisão de textos

--- a/changelog.html
+++ b/changelog.html
@@ -109,6 +109,7 @@
 
             <p class="text-justify"><b>26/11/2017</b></p>
             <p class="text-justify"> - Melhoria nas tabelas geradas na página de testes.</p>
+            <p class="text-justify"> - Revisão dos textos da página de testes.</p>
             <p class="text-justify"> - Mensagens de alerta ao usuário caso a entrada do gerador de dados esteja incorreta.</p>
             <p class="text-justify"> - As tabelas geradas podem ter valores negativos.</p>
 
