--- a/input-examples.html
+++ b/input-examples.html
@@ -132,7 +132,7 @@
 
             <p class="text-justify">Para facilitar a compreensão, tome como exemplo a estrutura IT para um problema de 3 variáveis, e sua correspondente forma matemática:</p>
 
-            <br><p class="text-center"><img src="http://mathurl.com/y8ymactl.png"></p><br>
+            <br><p class="text-center"><img src="http://mathurl.com/yc46lhbw.png"></p><br>
 
             <p class="text-justify">O algoritmo compôe uma expressão somando várias estruturas IT, onde cada uma tem um coeficiente. Isso quer dizer que toda expressão será da forma:</p>
 
