--- a/input-examples.html
+++ b/input-examples.html
@@ -93,7 +93,7 @@
             <a href="./input-examples.html" class="active">Exemplos de entrada</a>
             <a href="./study-notes.html">Notas de estudo</a>
             <a href="./feedback.html"><strong>Dê seu feedback</strong></a>
-            <a href="./changelog.html">Registo de updates do site</a>
+            <a href="./changelog.html">Registro de updates do site</a>
             <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub do projeto <br><small>(página externa)</small></a>
             <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">GitHub dos estudos <br><small>(página externa)</small></a>
         </nav>
