--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
                 <br><p class="text-center"><img src="http://mathurl.com/ydxewnc9.png"></p><br>
                 
                 <p class="text-justify"><b>Algoritmo SymTree</b></p>
-                <p class="text-justify">Este algoritmo inicia sua busca a partir de uma solução representando uma regressão linear. A cada iteração ele aplica as operações de interação entre as variáveis e transformação, gerando funções incrementalmente mais complexas. Esse algoritmo é executado por três iterações permitindo obter polinômios de grau 8. Mais detalhes pode ser visto em: </p>
+                <p class="text-justify">Este algoritmo inicia sua busca a partir de uma solução representando uma regressão linear. A cada iteração ele aplica as operações de interação entre as variáveis e transformação, gerando funções incrementalmente mais complexas. Esse algoritmo é executado por oito iterações. Mais detalhes pode ser visto em: </p>
 
                 <p class="text-justify"><b>Algoritmo IT-LS</b></p>
-                <p class="text-justify">O algoritmo funciona criando uma população inicial de expressões aleatórias e selecionando a melhor dentre elas. Após isso, executa uma busca local na equação, mudando ou as funções não-lineares ou os expoentes da equação, repetindo o processo até que não exista uma modificação que melhore ainda mais o score da equação.</p>
+                <p class="text-justify">O algoritmo funciona criando uma população inicial de expressões aleatórias e selecionando a melhor dentre elas. Após isso, executa uma busca local na equação, mudando ou as funções não-lineares ou os expoentes da equação, repetindo o processo até que não exista uma modificação que melhore ainda mais o score da equação. Esse algoritmo é executado até no máximo 50 iterações.</p>
 
                 <p class="text-justify"><b>Algoritmo IT-ES</b></p>
-                <p class="text-justify">O algoritmo funciona criando uma população de expressões aleatórias, e então executa um algoritmo de Estratégia Evolutiva ES-(mu, lambda). Esse algoritmo foi executado apenas com mutação, mu=lambda=100 e 400 iterações</p>
+                <p class="text-justify">O algoritmo funciona criando uma população de expressões aleatórias, e então executa um algoritmo de Estratégia Evolutiva ES-(mu, lambda). Esse algoritmo foi executado apenas com mutação, mu=150, lambda=45 e 150 iterações</p>
             </div>
         </section> 
         
