--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
 
                 <p>Dúvidas, críticas ou sugestões?</p> 
                 <p>Contate o desenvolvedor pelo email: guilherme.aldeia@aluno.ufabc.edu.br</p> 
+		    <p>ou seu orientador: folivetti@ufabc.edu.br</p> 
                 <p>Além disso, veja os <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">algoritmos</a> desenvolvidos durante os estudos do projeto!</p>
             </div>
         </section>
