--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 </li>
 		   <li><a href="#about">Sobre o projeto</a></li>
                 <li><a href="#contact-us">Contato</a></li>
+		    <li><a href="index-en.html">English version</a></li>
             </ul><!--Lista de opções-->
         </div><!--menu-->
     </div><!--container-->
@@ -107,7 +108,7 @@
             <div class="page-header">
 		    <h2>Assistente de Laboratório</h2>
 		    
-                                        <p class="text-justify">Página desenvolvida para mostrar a possibilidade de aplicação do algoritmo SymTree para Regressão Simbólica com baixo custo computacional. Essa ferramenta pode ser utilizada como auxiliar de laboratórios didáticos em que são feitos experimentos de mensuração para verificar relações vistas em sala de aula. A tecnologia utilizada é a linguagem JavaScript e, portanto, executa o algoritmo no próprio navegador do usuários.</p>
+                                        <p class="text-justify">Página desenvolvida para mostrar a possibilidade de aplicação do algoritmo SymTree para Regressão Simbólica com baixo custo computacional. Essa ferramenta pode ser utilizada como auxiliar de laboratórios didáticos em que são feitos experimentos de mensuração para verificar relações vistas em sala de aula. A tecnologia utilizada é a linguagem JavaScript e, portanto, executa o algoritmo no próprio navegador do usuários. Experimente!</p>
 
 		    <div class="alert alert-info">
                     <p class="text-justify"><strong>Quadro de avisos</strong><br> O site ainda está em desenvolvimento. Podem ocorrer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página.</p>
