--- a/index-en.html
+++ b/index-en.html
@@ -81,6 +81,7 @@
                 </li>
 		   <li><a href="#about">About the project</a></li>
                 <li><a href="#contact-us">Contact</a></li>
+		    <li><a href="index.html">Versão em português</a></li>
             </ul><!--Lista de opções-->
         </div><!--menu-->
     </div><!--container-->
@@ -92,7 +93,7 @@
         <!-- <p>Aqui estão listadas todas as páginas do site:</p> -->
         <nav>
             <a href="./index.html" class="active">Home</a>
-            <a href="./input-examples.html">Input examples</a>
+            <a href="./input-examples-en.html">Input examples</a>
             <a href="./study-notes.html">Study notes (in portuguese)</a>
             <a href="./feedback.html"><strong>Send us your feedback</strong></a>
             <a href="./changelog.html">Roadmap (in portuguese)</a>
