--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -77,7 +77,7 @@
                     <li><a href="./index-en.html">Home</a></li>
                     <li><a href="#testes">Successful Tests</a></li>
                   <li><a href="#failed">Unsuccessful Tests</a></li>
-                    <li><a href="#impossible">Note about unsupported functions</a></li>
+                    <!--<li><a href="#impossible">Note about unsupported functions</a></li>-->
                     <li><a href="#gen">Data Generator</a></li>
                     <li><a href="#contact-us">Contact</a></li>
                 </ul><!--Lista de opções-->
