--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -113,7 +113,7 @@
       <div class="page-header" id="failed">
             <h2>Unsuccessful Test Cases</h2>
 
-            <div class="row" id="tableHolder">
+            <div class="row" id="tableHolderFail">
             </div>
 
              
