--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -114,8 +114,16 @@
             <h2>Unsuccessful Test Cases</h2>
 
             <div class="row" id="tableHolderFail">
+		    <div class="col-lg-4"><p></p></div>
+		    <table align="center" style="width:3*75px">
+			    <tr><th>R1</th><th>R1</th><th>Rt</th></tr>
+			    <tr><td>10</td><td>10</td><td>5</td></tr>
+			    <tr><td>100</td><td>10</td><td>9.09</td></tr>
+			    <tr><td>100</td><td>50</td><td>1.96</td></tr>
+			    <tr><td>20</td><td>1000</td><td>19.61</td></tr>
+	            <caption class="text-center">Ohm's Law: Rt = 1 / (1/R1 + 1/R2)</caption></table>
+		    
             </div>
-
              
         </div>
 
