uso de arquivo .css

--- a/index-en.html
+++ b/index-en.html
@@ -37,7 +37,7 @@
                 <li><a href="#contact-us">Contact</a></li>
             </ul><!--Lista de opções-->
             <ul class="nav navbar-nav navbar-right">
-                <button class="btn btn-info navbar-btn" onclick="window.location='index.html'">Versão em português</button>
+                <button class="btn btn-default navbar-btn" onclick="window.location='index.html'">Versão em português</button>
             </ul>
         </div><!--menu-->
     </div><!--container-->
@@ -46,9 +46,8 @@
 <body class="body body-background container">
 
     <section id="sideMenu" class="well">
-        <!-- <p>Aqui estão listadas todas as páginas do site:</p> -->
         <nav>
-            <a href="./index.html" class="active">Home</a>
+            <a href="./index-en.html" class="active">Home</a>
             <a href="./input-examples-en.html">Input examples</a>
             <a href="./study-notes.html">Study notes (in portuguese)</a>
             <a href="./feedback.html"><strong>Send us your feedback</strong></a>
@@ -62,7 +61,7 @@
         
         <section id="intro">
             <div class="page-header">
-                                        <p class="text-justify">This webpage was developed to show the possibility of applying the SymTree algorithm as a lightweight alternative to common Symbolic Regression algorithms. This tool can be used as an assistent to physics and engineering experimental labs to verify equations and functions seen in theory classes. The algorithm was entirely developed in JavaScript and, as such, it runs in browser without any further requirements. Experiment and enjoy!</p>
+                <p class="text-justify">This webpage was developed to show the possibility of applying the SymTree algorithm as a lightweight alternative to common Symbolic Regression algorithms. This tool can be used as an assistent to physics and engineering experimental labs to verify equations and functions seen in theory classes. The algorithm was entirely developed in JavaScript and, as such, it runs in browser without any further requirements. Experiment and enjoy!</p>
 		    
 		    <div class="alert alert-info">
                     <p class="text-justify"><strong>Announcements</strong><br> This site is still under development. Some problems may occur during the execution of the experiments. Criticism and Suggestions are welcome.</p>
