--- a/changelog.html
+++ b/changelog.html
@@ -9,59 +9,9 @@
 	<meta charset="UTF-8"/>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
 
 	<title>Regressão Simbólica - Registro de updates</title>
-
-	<style>
-        *{
-            box-sizing: border-box;
-        }
-		body {
-            font-family: sans-serif;
-		}
-        .body-background {
-			background: url("./images/main-bg.png") repeat center center fixed;
-		}
-        section#sideMenu{
-            max-width: 240px;
-            min-width: 240px;
-            min-height: calc(100% - 70px);
-            margin-top: 38px;
-            padding-top: 50px;
-            position: fixed;
-        }
-        section#bodyContent{
-            position: relative;
-            margin-left: 280px;
-            margin-top: 70px;
-        }
-        section#sideMenu nav a.active{
-            background: lightgreen;
-            text-decoration: none;
-            border-left: 5px solid #92CF48;
-        }
-        section#sideMenu nav a:hover{
-            background: lightgreen;
-            text-decoration: none;
-            border-left: 5px solid #92CF48;
-        }
-        section#sideMenu nav a{
-            text-decoration: none;
-            color: #000;
-            padding: 10px 5px;
-            display: block;
-            border-bottom: 1px solid #92CF48;
-        }
-		.well{
-			border-radius: 12px 12px 12px 12px;
-			box-shadow: 3px 3px 32px 5px rgba(0,0,0,0.82);
-		}
-        table, th, td {
-			border: 1px solid black;
-			text-align: center;
-		}
-	</style>
-
 </head>
 
     <!--Cabeçalho da página-->
@@ -85,7 +35,6 @@
 <body class="body body-background container">
 
     <section id="sideMenu" class="well">
-        <p>Aqui estão listadas todas as páginas do site:</p>
         <nav>
             <a href="./index.html">Página inicial</a>
             <a href="./input-examples.html">Exemplos de entrada</a>
