--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#contact-us">Contato</a></li>
             </ul><!--Lista de opções-->
             <ul class="nav navbar-nav navbar-right">
-                <button class="btn btn-info navbar-btn" onclick="window.location='index-en.html'">English version</button>
+                <button class="btn btn-default navbar-btn" onclick="window.location='index-en.html'">English version</button>
             </ul>
         </div><!--menu-->
     </div><!--container-->
@@ -46,7 +46,6 @@
 <body class="body body-background container">
 
     <section id="sideMenu" class="well">
-        <!-- Aqui estão listadas todas as páginas do site: -->
         <nav>
             <a href="./index.html" class="active">Página inicial</a>
             <a href="./input-examples.html">Exemplos de entrada</a>
@@ -64,7 +63,7 @@
             <div class="page-header">
 		    <h2>Assistente de Laboratório</h2>
 		    
-                                        <p class="text-justify">Página desenvolvida para mostrar a possibilidade de aplicação do algoritmo SymTree para Regressão Simbólica com baixo custo computacional. Essa ferramenta pode ser utilizada como auxiliar de laboratórios didáticos em que são feitos experimentos de mensuração para verificar relações vistas em sala de aula. A tecnologia utilizada é a linguagem JavaScript e, portanto, executa o algoritmo no próprio navegador do usuários. Experimente!</p>
+            <p class="text-justify">Página desenvolvida para mostrar a possibilidade de aplicação do algoritmo SymTree para Regressão Simbólica com baixo custo computacional. Essa ferramenta pode ser utilizada como auxiliar de laboratórios didáticos em que são feitos experimentos de mensuração para verificar relações vistas em sala de aula. A tecnologia utilizada é a linguagem JavaScript e, portanto, executa o algoritmo no próprio navegador do usuários. Experimente!</p>
 
 		    <div class="alert alert-info">
                     <p class="text-justify"><strong>Quadro de avisos</strong><br> O site ainda está em desenvolvimento. Podem ocorrer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página.</p>
