--- a/input-examples.html
+++ b/input-examples.html
@@ -9,58 +9,9 @@
 	<meta charset="UTF-8"/>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
 
 	<title>Regressão Simbólica - Exemplos de Entrada</title>
-
-	<style>
-        *{
-            box-sizing: border-box;
-        }
-		body {
-            font-family: sans-serif;
-		}
-        .body-background {
-			background: url("./images/main-bg.png") repeat center center fixed;
-		}
-        section#sideMenu{
-            max-width: 240px;
-            min-width: 240px;
-            min-height: calc(100% - 70px);
-            margin-top: 38px;
-            padding-top: 50px;
-            position: fixed;
-        }
-        section#bodyContent{
-            position: relative;
-            margin-left: 280px;
-            margin-top: 70px;
-        }
-        section#sideMenu nav a.active{
-            background: lightgreen;
-            text-decoration: none;
-            border-left: 5px solid #92CF48;
-        }
-        section#sideMenu nav a:hover{
-            background: lightgreen;
-            text-decoration: none;
-            border-left: 5px solid #92CF48;
-        }
-        section#sideMenu nav a{
-            text-decoration: none;
-            color: #000;
-            padding: 10px 5px;
-            display: block;
-            border-bottom: 1px solid #92CF48;
-        }
-		.well{
-			border-radius: 12px 12px 12px 12px;
-			box-shadow: 3px 3px 32px 5px rgba(0,0,0,0.82);
-		}
-        table, th, td {
-			border: 1px solid black;
-			text-align: center;
-		}
-	</style>
 
 </head>
 
@@ -75,12 +26,22 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li><a href="./index.html">Página inicial</a></li>
-                    <li><a href="#testes">Testes bem sucedidos</a></li>
-			<li><a href="#testes">Testes mal sucedidos</a></li>
-                    <li><a href="#impossible">Funções incompatíveis</a></li>
-                    <li><a href="#gen">Gerador de dados</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">Nesta página<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#testes">Testes bem sucedidos</a></li>
+                            <li><a href="#testes">Testes mal sucedidos</a></li>
+                            <!--li><a href="#impossible">Funções incompatíveis</a></li-->
+                            <li><a href="#gen">Gerador de dados</a></li>
+                            <li><a href="#explain">Resultados esperados</a></li>
+                        </ul>
+                    </li>
+                    
                     <li><a href="#contact-us">Contato</a></li>
                 </ul><!--Lista de opções-->
+                <ul class="nav navbar-nav navbar-right">
+                    <button class="btn btn-default navbar-btn" onclick="window.location='input-examples-en.html'">English version</button>
+                </ul>
             </div><!--menu-->
         </div><!--container-->
     </nav><!--navbar-->
@@ -88,7 +49,6 @@
 <body class="body body-background container">
 
     <section id="sideMenu" class="well">
-        <p>Aqui estão listadas todas as páginas do site:</p>
         <nav>
             <a href="./index.html">Página inicial</a>
             <a href="./input-examples.html" class="active">Exemplos de entrada</a>
