novas tabelas de exemplo

--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -48,12 +48,12 @@
     <section id="sideMenu" class="well">
         <nav>
             <a href="./index-en.html">Home</a>
-            <a href="./input-examples-en.html" class="active">Input Examples</a>
-            <a href="./study-notes.html">Study Notes</a>
-            <a href="./feedback.html"><strong>Feedback</strong></a>
-            <a href="./changelog.html">Roadmap</a>
+            <a href="./input-examples-en.html" class="active">Input examples</a>
+            <a href="./study-notes.html">Study notes (in portuguese)</a>
+            <a href="./feedback.html"><strong>Send us your feedback</strong></a>
+            <a href="./changelog.html">Roadmap (in portuguese)</a>
             <a href="https://github.com/gAldeia/gAldeia.github.io">Project GitHub<br><small>(external link)</small></a>
-            <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">GitHub<br><small>(external link)</small></a>
+            <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">Author's GitHub<br><small>(external link)</small></a>
         </nav>
     </section>
 
@@ -71,13 +71,13 @@
             <h2>Unsuccessful Test Cases</h2>
             <div class="row" id="tableHolderFail">
 		    <div class="col-lg-4"><p></p></div>
-		    <table align="center" style="width:3*75px">
-			    <tr><th>R1</th><th>R1</th><th>Rt</th></tr>
+		    <table align="center" style="width:225px">
+                <tr><th>R<sub>1</sub></th><th>R<sub>2</sub></th><th>R<sub>t</sub></th></tr>
 			    <tr><td>10</td><td>10</td><td>5</td></tr>
 			    <tr><td>100</td><td>10</td><td>9.09</td></tr>
 			    <tr><td>100</td><td>50</td><td>1.96</td></tr>
 			    <tr><td>20</td><td>1000</td><td>19.61</td></tr>
-	            <caption class="text-center">Ohm's Law: Rt = 1 / (1/R1 + 1/R2)</caption></table>
+	            <caption class="text-center">Ohm's Law: R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption></table>
             </div>
         </div>
 
