novas tabelas de exemplo

--- a/changelog.html
+++ b/changelog.html
@@ -56,6 +56,13 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>08/12/2017</b></p>
+            <p class="text-justify"> - Novos hiperlinks para o site da universidade.</p>
+            <p class="text-justify"> - Corrigido bug com rótulos das colunas.</p>
+
+            <p class="text-justify"><b>06/12/2017</b></p>
+            <p class="text-justify"> - Novos textos na página de notas de estudo e novas tabelas de teste.</p>
+
             <p class="text-justify"><b>26/11/2017</b></p>
             <p class="text-justify"> - Melhoria nas tabelas geradas na página de testes.</p>
             <p class="text-justify"> - Revisão dos textos da página de testes.</p>
