--- a/index-en.html
+++ b/index-en.html
@@ -175,7 +175,7 @@
                 <p class="text-justify">Symbolic Regression tries to find a generator function for a sampled data. It differs from other types of regression for it does not have a fixed form like linear regression, polynomial regression or neural networks. Usually, Symbolic Regression is performed by means of Evolutionary Algorithm (i.e., Genetic Programming), but these are usually time consuming even for a few samples in lower dimensions.</p>
                 <p class="text-justify">This project has the main goal of showing the potential of SymTree algorithm as a lightweight Symbolic Regression algorithm to help with simple equation learner for Physics, Engineering, etc.</p>
               
-              <p class="text-justify">This project was developed by Guilherme Aldeia as part of his undergraduation research project advised by prof. Fabricio Olivetti de França at Universidade Federal do ABC.</p>
+              <p class="text-justify">This project was developed by Guilherme Aldeia as part of his undergraduation research project advised by prof. Fabricio Olivetti de França at <a href="http://www.ufabc.edu.br/">Universidade Federal do ABC</a>.</p>
 		    
             </div>
         </section>
