--- a/input-examples.html
+++ b/input-examples.html
@@ -61,17 +61,19 @@
         <div class="page-header" id="testes">
             <h2>Funções compatíveis</h2>
 
+            <h3 class="text-center">Equações matemáticas</h3>
+
             <p class="text-justify">Aqui temos algumas linhas de entradas criadas por funções, usadas para testar os algoritmos:</p>
 
             <div class="row" id="tableHolder">
-            </div>
-
-            <br>
+            </div><br>
             
+            <h3 class="text-center">Equações da física e engenharia</h3>
+
             <p class="text-justify">Para validar o funcionamento, além de funções matemáticas escolhidas arbitráriamente, temos algumas tabelas de funções comumente usadas em problemas de física e engenharia, que podem ser encontradas pelos algoritmos:</p>
 
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <p><table align="center" style="width:260px">
                         <tr><th>&rho;</th><th>g<sub>(m/s)</sub></th><th>&Delta;h</th><th>&Delta;P</th></tr>
                         <tr><td>0.7</td><td>9.807</td><td>0.7</td><td>4.805</td></tr>
@@ -82,24 +84,11 @@
                         <tr><td>0.7</td><td>9.807</td><td>5.6</td><td>38.443</td></tr>
                         <tr><td>0.9</td><td>9.807</td><td>6.9</td><td>60.901</td></tr>
                         <tr><td>1.0</td><td>9.807</td><td>7.1</td><td>69.629</td></tr>
-                        <caption class="text-center">Variação de pressão vertical num fluido: &Delta;P = &rho;g&Delta;h</caption>
+                        <caption class="text-center">Variação de pressão vertical num fluido:<br>&Delta;P = &rho;g&Delta;h</caption>
                     </table></p>
                 </div>
 
-                <div class="col-lg-4">
-                    <p><table align="center" style="width:260px">
-                        <tr><th>F</th><th>&Delta;s</th><th>cos(&Theta;)</th><th>W</th></tr>
-                        <tr><td>15</td><td>1</td><td>0.540</td><td>8.104</td></tr>
-                        <tr><td>13</td><td>0.98</td><td>0.362</td><td>4.616</td></tr>
-                        <tr><td>11</td><td>0.95</td><td>0.070</td><td>0.739</td></tr>
-                        <tr><td>9</td><td>1.1</td><td>0.267</td><td>2.648</td></tr>
-                        <tr><td>9</td><td>1.1</td><td>0.169</td><td>1.682</td></tr>
-                        <tr><td>9</td><td>1.0</td><td>0.070</td><td>0.636</td></tr>
-                        <caption class="text-center">Trabalho: W = F &Delta;s cos(&Theta;)</caption>
-                    </table></p>
-                </div>
-
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <p><table align="center" style="width:195px">
                         <tr><th>k</th><th>&Delta;l</th><th>F</th></tr>
                         <tr><td>150</td><td>1</td><td>150</td></tr>
@@ -110,7 +99,65 @@
                         <tr><td>150</td><td>6</td><td>900</td></tr>
                         <tr><td>150</td><td>7</td><td>1050</td></tr>
                         <tr><td>150</td><td>8</td><td>1200</td></tr>
-                        <caption class="text-center">Lei de Hooke: F = k * &Delta;l</caption>
+                        <caption class="text-center">Lei de Hooke:<br>F = k * &Delta;l</caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>b</th><th>h</th><th>A</th></tr>
+                        <tr><td>10</td><td>25</td><td>250</td></tr>
+                        <tr><td>15</td><td>15</td><td>225</td></tr>
+                        <tr><td>12</td><td>32</td><td>384</td></tr>
+                        <tr><td>3</td><td>40</td><td>120</td></tr>
+                        <tr><td>5</td><td>5</td><td>25</td></tr>
+                        <tr><td>152</td><td>26</td><td>3952</td></tr>
+                        <tr><td>102</td><td>17</td><td>1734</td></tr>
+                        <tr><td>1</td><td>8</td><td>8</td></tr>
+                        <caption class="text-center">Área de um retângulo:<br>A = bh</caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>m</th><th>E</th></tr>
+                        <tr><td>7</td><td>6.2912863e+17</td></tr>
+                        <tr><td>10</td><td>8.9875518e+17</td></tr>
+                        <tr><td>5</td><td>4.4937759e+17</td></tr>
+                        <tr><td>4</td><td>3.5950207e+17</td></tr>
+                        <tr><td>1</td><td>8.9875518e+16</td></tr>
+                        <tr><td>6</td><td>5.3925311e+17</td></tr>
+                        <tr><td>2</td><td>1.7975104e+17</td></tr>
+                        <tr><td>8</td><td>7.1900414e+17</td></tr>
+                        <caption class="text-center">Equivalência de massa e energia:<br>E = mc<sup>2</sup></caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>b</th><th>h</th><th>I<sub>x</sub></th></tr>
+                        <tr><td>150</td><td>1</td><td>150</td></tr>
+                        <tr><td>150</td><td>2</td><td>300</td></tr>
+                        <tr><td>150</td><td>3</td><td>450</td></tr>
+                        <tr><td>150</td><td>4</td><td>600</td></tr>
+                        <tr><td>150</td><td>5</td><td>750</td></tr>
+                        <tr><td>150</td><td>6</td><td>900</td></tr>
+                        <tr><td>150</td><td>7</td><td>1050</td></tr>
+                        <tr><td>150</td><td>8</td><td>1200</td></tr>
+                        <caption class="text-center">Momento de inércia em um retângulo:<br>I<sub>x</sub>= (1/12)*bh<sup>3</sup></caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:260px">
+                        <tr><th>F</th><th>&Delta;s</th><th>cos(&Theta;)</th><th>W</th></tr>
+                        <tr><td>15</td><td>1</td><td>0.540</td><td>8.104</td></tr>
+                        <tr><td>13</td><td>0.98</td><td>0.362</td><td>4.616</td></tr>
+                        <tr><td>11</td><td>0.95</td><td>0.070</td><td>0.739</td></tr>
+                        <tr><td>9</td><td>1.1</td><td>0.267</td><td>2.648</td></tr>
+                        <tr><td>9</td><td>1.1</td><td>0.169</td><td>1.682</td></tr>
+                        <tr><td>9</td><td>1.0</td><td>0.070</td><td>0.636</td></tr>
+                        <caption class="text-center">Trabalho:<br>W = F &Delta;s cos(&Theta;)</caption>
                     </table></p>
                 </div>
             </div>
@@ -134,18 +181,18 @@
 
             <div class="row">
                 <div class="col-lg-4"><p>
-                    <table align="center" style="width:225px">
+                    <table align="center" style="width:195px">
                         <tr><th>R<sub>1</sub></th><th>R<sub>2</sub></th><th>R<sub>t</sub></th></tr>
                         <tr><td>10</td><td>10</td><td>5</td></tr>
                         <tr><td>100</td><td>10</td><td>9.09</td></tr>
                         <tr><td>100</td><td>50</td><td>1.96</td></tr>
                         <tr><td>20</td><td>1000</td><td>19.61</td></tr>
-                        <caption class="text-center">Lei de Ohm: R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption>
+                        <caption class="text-center">Lei de Ohm:<br>R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption>
                     </table>
                 </p></div>
 
                 <div class="col-lg-4"><p>
-                    <table align="center" style="width:300px">
+                    <table align="center" style="width:260px">
                         <tr><th>F</th><th>&Delta;s</th><th>&Theta;</th><th>W</th></tr>
                         <tr><td>15</td><td>1</td><td>1</td><td>8.104</td></tr>
                         <tr><td>14</td><td>1</td><td>1</td><td>7.564</td></tr>
@@ -154,9 +201,24 @@
                         <tr><td>11</td><td>0.95</td><td>1.5</td><td>0.739</td></tr>
                         <tr><td>10</td><td>0.94</td><td>1.5</td><td>0.664</td></tr>
                         <tr><td>9</td><td>1.1</td><td>1.3</td><td>2.648</td></tr>
-                        <caption class="text-center">Trabalho: W = F &Delta;s cos(&Theta;)</caption>
+                        <caption class="text-center">Trabalho:<br>W = F &Delta;s cos(&Theta;)</caption>
                     </table>
                 </p></div>
+
+                <div class="col-lg-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>k</th><th>&Delta;l</th><th>F</th></tr>
+                        <tr><td>150</td><td>1</td><td>150</td></tr>
+                        <tr><td>150</td><td>2</td><td>300</td></tr>
+                        <tr><td>150</td><td>3</td><td>450</td></tr>
+                        <tr><td>150</td><td>4</td><td>600</td></tr>
+                        <tr><td>150</td><td>5</td><td>750</td></tr>
+                        <tr><td>150</td><td>6</td><td>900</td></tr>
+                        <tr><td>150</td><td>7</td><td>1050</td></tr>
+                        <tr><td>150</td><td>8</td><td>1200</td></tr>
+                        <caption class="text-center">Teorema de pitágoras:<br>c<sup>2</sup> = a<sup>2</sup> + b<sup>2</sup></caption>
+                    </table></p>
+                </div>
             </div>
             
             <p class="text-justify">Para entender melhor o motivo de algumas funções serem incompatíveis, a estrutura de dados utilizada pelos algoritmos é descrita nas <a href="./study-notes.html#IT">notas de estudo</a>.</p>
