--- a/changelog.html
+++ b/changelog.html
@@ -56,6 +56,10 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>09/12/2017</b></p>
+            <p class="text-justify"> - Novo texto de estudo.</p>
+            <p class="text-justify"> - Novas expressões para criar tabelas.</p>
+
             <p class="text-justify"><b>08/12/2017</b></p>
             <p class="text-justify"> - Novos hiperlinks para o site da universidade.</p>
             <p class="text-justify"> - Corrigido bug com rótulos das colunas.</p>
