notas de estudo

--- a/study-notes.html
+++ b/study-notes.html
@@ -90,6 +90,8 @@
             <p class="text-justify">Nos algoritmos implementados, temos as seguintes operações:</p>
 
             <br><p class="text-center"><i>identidade, seno, cosseno, tangente, valor absoluto, raiz quadrada, exponencial, logaritmo</i></p><br>
+
+            <p class="text-justify">Então cada expressão formada sempre será uma expressão linear (<img src="http://mathurl.com/ydb48h6c.png">)onde cada termo x<sub>i</sub> é uma das operações acima, multiplicada por um coeficiente.</p>
             
             <h3 class="text-center" id="IT">A estrutura de dados IT</h3>
 
