revisão no código

--- a/changelog.html
+++ b/changelog.html
@@ -56,6 +56,11 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>11/12/2017</b></p>
+            <p class="text-justify"> - Simplify em todos os métodos.</p>
+            <p class="text-justify"> - Removidas redundâncias no código.</p>
+            <p class="text-justify"> - Melhoria na impressão dos termos, para torná-los mais legíveis.</p>
+
             <p class="text-justify"><b>09/12/2017</b></p>
             <p class="text-justify"> - Novo texto de estudo.</p>
             <p class="text-justify"> - Novas expressões para criar tabelas.</p>
