--- a/input-examples.html
+++ b/input-examples.html
@@ -74,31 +74,100 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <p><table align="center" style="width:260px">
-                        <tr><th>&rho;</th><th>g<sub>(m/s)</sub></th><th>&Delta;h</th><th>&Delta;P</th></tr>
-                        <tr><td>0.7</td><td>9.807</td><td>0.7</td><td>4.805</td></tr>
-                        <tr><td>0.9</td><td>9.807</td><td>1.1</td><td>9.708</td></tr>
-                        <tr><td>0.7</td><td>9.807</td><td>1.6</td><td>10.983</td></tr>
-                        <tr><td>1.0</td><td>9.807</td><td>2</td><td>19.614</td></tr>
-                        <tr><td>0.9</td><td>9.807</td><td>5.0</td><td>44.131</td></tr>
-                        <tr><td>0.7</td><td>9.807</td><td>5.6</td><td>38.443</td></tr>
-                        <tr><td>0.9</td><td>9.807</td><td>6.9</td><td>60.901</td></tr>
-                        <tr><td>1.0</td><td>9.807</td><td>7.1</td><td>69.629</td></tr>
-                        <caption class="text-center">Variação de pressão vertical num fluido:<br>&Delta;P = &rho;&middot;g&middot;&Delta;h</caption>
+                    <p><table align="center" style="width:195px">
+                        <tr><th>&rho;</th><th>&Delta;h</th><th>&Delta;P</th></tr>
+                        <tr><td> 95 </td><td> 40 </td><td> 37266.6 </td></tr>
+                        <tr><td> 40 </td><td> 35 </td><td> 13729.8 </td></tr>
+                        <tr><td> 90 </td><td> 50 </td><td> 44131.5 </td></tr>
+                        <tr><td> 85 </td><td> 15 </td><td> 12503.925 </td></tr>
+                        <tr><td> 30 </td><td> 85 </td><td> 25007.85 </td></tr>
+                        <tr><td> 15 </td><td> 65 </td><td> 9561.825 </td></tr>
+                        <tr><td> 60 </td><td> 25 </td><td> 14710.5 </td></tr>
+                        <tr><td> 55 </td><td> 60 </td><td> 32363.1 </td></tr>
+                        <tr><td> 0  </td><td> 45 </td><td> 0.0 </td></tr>
+                        <tr><td> 20 </td><td> 80 </td><td> 15691.2 </td></tr>
+                        <tr><td> 5  </td><td> 75 </td><td> 3677.625 </td></tr>
+                        <tr><td> 80 </td><td> 55 </td><td> 43150.8 </td></tr>
+                        <tr><td> 65 </td><td> 30 </td><td> 19123.65 </td></tr>
+                        <tr><td> 10 </td><td> 10 </td><td> 980.7 </td></tr>
+                        <tr><td> 25 </td><td> 90 </td><td> 22065.75 </td></tr>
+                        <tr><td> 50 </td><td> 20 </td><td> 9807.0 </td></tr>
+                        <tr><td> 45 </td><td> 70 </td><td> 30892.05 </td></tr>
+                        <tr><td> 70 </td><td> 95 </td><td> 65216.55 </td></tr>
+                        <caption class="text-center">Variação de pressão vertical num fluido:<br>&Delta;P = &rho;&middot;g<sub>(m/s)</sub>&middot;&Delta;h</caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>m</th><th>E</th></tr>
+                        <tr><td>50</td><td>4.4937759e+18</td></tr>
+                        <tr><td>170</td><td>1.527883806e+19</td></tr>
+                        <tr><td>70</td><td>6.29128626e+18</td></tr>
+                        <tr><td>190</td><td>1.707634842e+19</td></tr>
+                        <tr><td>10</td><td>8.9875518e+17</td></tr>
+                        <tr><td>90</td><td>8.08879662e+18</td></tr>
+                        <tr><td>80</td><td>7.19004144e+18</td></tr>
+                        <tr><td>40</td><td>3.59502072e+18</td></tr>
+                        <tr><td>120</td><td>1.078506216e+19</td></tr>
+                        <tr><td>130</td><td>1.168381734e+19</td></tr>
+                        <tr><td>180</td><td>1.617759324e+19</td></tr>
+                        <tr><td>110</td><td>9.88630698e+18</td></tr>
+                        <tr><td>30</td><td>2.69626554e+18</td></tr>
+                        <tr><td>160</td><td>1.438008288e+19</td></tr>
+                        <tr><td>20</td><td>1.79751036e+18</td></tr>
+                        <tr><td>140</td><td>1.258257252e+19</td></tr>
+                        <tr><td>150</td><td>1.34813277e+19</td></tr>
+                        <tr><td>100</td><td>8.9875518e+18</td></tr>
+                        <caption class="text-center">Equivalência de massa e energia:<br>E = m&middot;c<sup>2</sup></caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>b</th><th>h</th><th>I<sub>x</sub></th></tr>
+                        <tr><td>90</td><td>30</td><td>202500.0</td></tr>
+                        <tr><td>10</td><td>75</td><td>351562.5</td></tr>
+                        <tr><td>170</td><td>85</td><td>8700104.16667</td></tr>
+                        <tr><td>150</td><td>10</td><td>12500.0</td></tr>
+                        <tr><td>70</td><td>25</td><td>91145.8333333</td></tr>
+                        <tr><td>60</td><td>80</td><td>2560000.0</td></tr>
+                        <tr><td>120</td><td>95</td><td>8573750.0</td></tr>
+                        <tr><td>40</td><td>65</td><td>915416.666667</td></tr>
+                        <tr><td>30</td><td>15</td><td>8437.5</td></tr>
+                        <tr><td>50</td><td>45</td><td>379687.5</td></tr>
+                        <tr><td>20</td><td>40</td><td>106666.666667</td></tr>
+                        <tr><td>180</td><td>90</td><td>10935000.0</td></tr>
+                        <tr><td>100</td><td>70</td><td>2858333.33333</td></tr>
+                        <tr><td>160</td><td>55</td><td>2218333.33333</td></tr>
+                        <tr><td>80</td><td>60</td><td>1440000.0</td></tr>
+                        <tr><td>110</td><td>50</td><td>1145833.33333</td></tr>
+                        <tr><td>190</td><td>35</td><td>678854.166667</td></tr>
+                        <tr><td>140</td><td>20</td><td>93333.3333333</td></tr>                        
+                        <caption class="text-center">Momento de inércia em um retângulo:<br>I<sub>x</sub>= (1/12)&middot;b&middot;h<sup>3</sup></caption>
                     </table></p>
                 </div>
 
                 <div class="col-md-4">
                     <p><table align="center" style="width:195px">
                         <tr><th>k</th><th>&Delta;l</th><th>F</th></tr>
-                        <tr><td>150</td><td>1</td><td>150</td></tr>
-                        <tr><td>150</td><td>2</td><td>300</td></tr>
-                        <tr><td>150</td><td>3</td><td>450</td></tr>
-                        <tr><td>150</td><td>4</td><td>600</td></tr>
-                        <tr><td>150</td><td>5</td><td>750</td></tr>
-                        <tr><td>150</td><td>6</td><td>900</td></tr>
-                        <tr><td>150</td><td>7</td><td>1050</td></tr>
-                        <tr><td>150</td><td>8</td><td>1200</td></tr>
+                        <tr><td>1.9</td><td>25</td><td>47.5</td></tr>
+                        <tr><td>0.9</td><td>50</td><td>45.0</td></tr>
+                        <tr><td>0.8</td><td>80</td><td>64.0</td></tr>
+                        <tr><td>0.1</td><td>20</td><td>2.0</td></tr>
+                        <tr><td>0.5</td><td>40</td><td>20.0</td></tr>
+                        <tr><td>0.3</td><td>45</td><td>13.5</td></tr>
+                        <tr><td>0.0</td><td>70</td><td>0.0</td></tr>
+                        <tr><td>1.2</td><td>95</td><td>114.0</td></tr>
+                        <tr><td>0.7</td><td>10</td><td>7.0</td></tr>
+                        <tr><td>1.1</td><td>15</td><td>16.5</td></tr>
+                        <tr><td>0.2</td><td>55</td><td>11.0</td></tr>
+                        <tr><td>1.5</td><td>90</td><td>135.0</td></tr>
+                        <tr><td>1.7</td><td>65</td><td>110.5</td></tr>
+                        <tr><td>0.4</td><td>30</td><td>12.0</td></tr>
+                        <tr><td>1.3</td><td>60</td><td>78.0</td></tr>
+                        <tr><td>1.6</td><td>75</td><td>120.0</td></tr>
+                        <tr><td>0.6</td><td>85</td><td>51.0</td></tr>
                         <caption class="text-center">Lei de Hooke:<br>F = k&middot;&Delta;l</caption>
                     </table></p>
                 </div>
@@ -106,39 +175,49 @@
                 <div class="col-md-4">
                     <p><table align="center" style="width:195px">
                         <tr><th>b</th><th>h</th><th>A</th></tr>
-                        <tr><td>10</td><td>25</td><td>250</td></tr>
-                        <tr><td>15</td><td>15</td><td>225</td></tr>
-                        <tr><td>12</td><td>32</td><td>384</td></tr>
-                        <tr><td>3</td><td>40</td><td>120</td></tr>
-                        <tr><td>5</td><td>5</td><td>25</td></tr>
-                        <tr><td>152</td><td>26</td><td>3952</td></tr>
-                        <tr><td>102</td><td>17</td><td>1734</td></tr>
-                        <tr><td>1</td><td>8</td><td>8</td></tr>
+                        <tr><td>120</td><td>85</td><td>10200</td></tr>
+                        <tr><td>80</td><td>40</td><td>3200</td></tr>
+                        <tr><td>170</td><td>30</td><td>5100</td></tr>
+                        <tr><td>110</td><td>50</td><td>5500</td></tr>
+                        <tr><td>50</td><td>75</td><td>3750</td></tr>
+                        <tr><td>130</td><td>60</td><td>7800</td></tr>
+                        <tr><td>20</td><td>95</td><td>1900</td></tr>
+                        <tr><td>180</td><td>55</td><td>9900</td></tr>
+                        <tr><td>90</td><td>70</td><td>6300</td></tr>
+                        <tr><td>10</td><td>35</td><td>350</td></tr>
+                        <tr><td>100</td><td>15</td><td>1500</td></tr>
+                        <tr><td>70</td><td>80</td><td>5600</td></tr>
+                        <tr><td>140</td><td>25</td><td>3500</td></tr>
+                        <tr><td>160</td><td>10</td><td>1600</td></tr>
+                        <tr><td>60</td><td>45</td><td>2700</td></tr>
+                        <tr><td>40</td><td>20</td><td>800</td></tr>
+                        <tr><td>150</td><td>65</td><td>9750</td></tr>
                         <caption class="text-center">Área de um retângulo:<br>A = b&middot;h</caption>
                     </table></p>
                 </div>
-
-                <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
-                        <tr><th>m</th><th>E</th></tr>
-                        <tr><td>7</td><td>6.2912863e+17</td></tr>
-                        <caption class="text-center">Equivalência de massa e energia:<br>E = m&middot;c<sup>2</sup></caption>
-                    </table></p>
-                </div>
-
+                
                 <div class="col-md-4">
                     <p><table align="center" style="width:260px">
                         <tr><th>F</th><th>&Delta;s</th><th>cos(&Theta;)</th><th>W</th></tr>
-                        <tr><td>15</td><td>1</td><td>0.540</td><td>8.104</td></tr>
+                        <tr><td>136</td><td>40</td><td>-0.78</td><td>-4243.2</td></tr>
+                        <tr><td>192</td><td>75</td><td>0.97</td><td>13968.0</td></tr>
+                        <tr><td>185</td><td>60</td><td>-0.28</td><td>-3108.0</td></tr>
+                        <tr><td>24</td><td>65</td><td>-0.92</td><td>-1435.2</td></tr>
+                        <tr><td>157</td><td>35</td><td>0.15</td><td>824.25</td></tr>
+                        <tr><td>199</td><td>90</td><td>-0.44</td><td>-7880.4</td></tr>
+                        <tr><td>31</td><td>55</td><td>0.68</td><td>1159.4</td></tr>
+                        <tr><td>73</td><td>70</td><td>0.97</td><td>4956.7</td></tr>
+                        <tr><td>101</td><td>30</td><td>-0.0</td><td>-0.0</td></tr>
+                        <tr><td>59</td><td>25</td><td>-0.45</td><td>-663.75</td></tr>
+                        <tr><td>17</td><td>85</td><td>-0.28</td><td>-404.6</td></tr>
+                        <tr><td>38</td><td>20</td><td>0.18</td><td>136.8</td></tr>
+                        <tr><td>122</td><td>95</td><td>-0.8</td><td>-9272.0</td></tr>
+                        <tr><td>171</td><td>45</td><td>-0.91</td><td>-7002.45</td></tr>
+                        <tr><td>45</td><td>15</td><td>-0.87</td><td>-587.25</td></tr>
+                        <tr><td>52</td><td>50</td><td>-0.73</td><td>-1898.0</td></tr>
+                        <tr><td>87</td><td>10</td><td>-0.09</td><td>-78.3</td></tr>
+                        <tr><td>143</td><td>80</td><td>0.82</td><td>9380.8</td></tr>                   
                         <caption class="text-center">Trabalho:<br>W = F&middot;&Delta;s&middot;cos(&Theta;)</caption>
-                    </table></p>
-                </div>
-
-                <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
-                        <tr><th>b</th><th>h</th><th>I<sub>x</sub></th></tr>
-                        <tr><td>150</td><td>1</td><td>150</td></tr>
-                        <caption class="text-center">Momento de inércia em um retângulo:<br>I<sub>x</sub>= (1/12)&middot;b&middot;h<sup>3</sup></caption>
                     </table></p>
                 </div>
 
@@ -172,13 +251,6 @@
                 <div class="col-lg-4"><p>
                     <table align="center" style="width:260px">
                         <tr><th>F</th><th>&Delta;s</th><th>&Theta;</th><th>W</th></tr>
-                        <tr><td>15</td><td>1</td><td>1</td><td>8.104</td></tr>
-                        <tr><td>14</td><td>1</td><td>1</td><td>7.564</td></tr>
-                        <tr><td>13</td><td>0.98</td><td>1.2</td><td>4.616</td></tr>
-                        <tr><td>12</td><td>1.05</td><td>1.2</td><td>4.565</td></tr>
-                        <tr><td>11</td><td>0.95</td><td>1.5</td><td>0.739</td></tr>
-                        <tr><td>10</td><td>0.94</td><td>1.5</td><td>0.664</td></tr>
-                        <tr><td>9</td><td>1.1</td><td>1.3</td><td>2.648</td></tr>
                         <caption class="text-center">Trabalho:<br>W = F&middot;&Delta;s&middot;cos(&Theta;)</caption>
                     </table>
                 </p></div>
